crates/analyzer/tests/snapshots/errors__bool_constructor.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `bool` type is not callable
  ┌─ [snippet]:3:3
  │
3 │   bool(true)
  │   ^^^^


